<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/AccueilGlobalParam"
    android:summary="@string/AccueilGlobalParamSummary">

    <PreferenceCategory android:title="@string/GlobalCat"/>

    <CheckBoxPreference
        android:summary="CheckBox summary"
        android:title="@string/GlobalBoot"
        android:summaryOn="@string/GlobalBootSummaryOn"
        android:summaryOff="@string/GlobalBootSummaryOff"
        android:key="boot" android:defaultValue="true"
        />

    <CheckBoxPreference
        android:summary="CheckBox summary"
        android:title="@string/GlobalNotif"
        android:summaryOn="@string/GlobalNotifSummaryOn"
        android:summaryOff="@string/GlobalNotifSummaryOff"
        android:key="notif" android:defaultValue="false"
        />

    <PreferenceCategory android:title="@string/GlobalCatSet"/>

    <Preference android:title="Open List Servers"
        android:key="@string/buttonListServer"
        android:summary="">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="org.flyve.inventory.agent"
            android:targetClass="org.flyve.inventory.agent.ui.ActivityListServers" />
    </Preference>

    <PreferenceCategory android:title="@string/AccueilPrivacyTitle"/>

    <CheckBoxPreference
        android:summary="CheckBox summary"
        android:title="@string/AccueilCrashReportTitle"
        android:key="crashReport"
        android:summaryOn="@string/AccueilCrashReportSummaryOn"
        android:summaryOff="@string/AccueilCrashReportSummaryOff"
        android:defaultValue="true"
        />

    <CheckBoxPreference
        android:summary="CheckBox summary"
        android:title="@string/AccueilAnonymousDataTitle"
        android:summaryOn="@string/AccueilAnonymousDataSummaryOn"
        android:summaryOff="@string/AccueilAnonymousDataSummaryOff"
        android:key="anonymousData"
        android:defaultValue="true"
        />
</PreferenceScreen>
