<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/AccueilInventoryParam"
    android:summary="@string/AccueilInventoryParamSummary"
    >

    <PreferenceCategory android:title="@string/InventoryCat"/>

    <CheckBoxPreference
        android:summary="CheckBox summary"
        android:title="@string/InventoryAuto"
        android:summaryOn="@string/InventoryAutoSummaryOn"
        android:summaryOff="@string/InventoryAutoSummaryOff"
        android:key="autoStartInventory" android:defaultValue="true"
        />
    <ListPreference
        android:key="timeInventory"
        android:title="@string/InventoryFrequency"
        android:dialogTitle="@string/InventoryFrequency"
        android:dependency="autoStartInventory"
        android:entries="@array/Time"
        android:entryValues="@array/TimeValue"
        android:defaultValue="@string/week"
        android:summary="@string/InventoryFrequencySummary"
        />

</PreferenceScreen>