<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?android:attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/detail_server"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/deleteServer"

                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/radius_btn_yellow"
                android:text="@string/delete"
                android:textColor="@color/textColorYellow" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/actionServer"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:divider="@drawable/empty_tall_divider"
            android:orientation="vertical"
            android:padding="15dp"
            android:paddingBottom="50dp"
            android:showDividers="middle">

            <EditText
                android:id="@+id/editUrlAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/GlobalServerSummary"
                android:inputType="textUri" />

            <EditText
                android:id="@+id/editTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tagSummary"
                android:inputType="text" />

            <EditText
                android:id="@+id/editLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="textUri" />

            <EditText
                android:id="@+id/editPassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Spinner
                android:id="@+id/spinnerAssetItemtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editSerialNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/serial"
                android:inputType="text" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/actionServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorYellow"
        android:text=""
        android:textColor="@color/textColorYellow" />

</RelativeLayout>